Changelog
=========

01-09-2020| Changed path to find package.
03-09-2020| Added function to group your blocks for diffrent streamfields