@@ -1,24 +1,0 @@
-from wagtail.core.blocks import (
-    BaseStreamBlock,
-    StructBlock,
-    StreamBlock,
-    FloatBlock,
-    CharBlock,
-    ChoiceBlock,
-    ChooserBlock,
-    RawHTMLBlock,
-    TextBlock,
-    TimeBlock,
-    RichTextBlock,
-    DateTimeBlock,
-    DateBlock,
-    EmailBlock,
-    BooleanBlock,
-    BoundBlock,
-    IntegerBlock,
-    ListBlock,
-    PageChooserBlock
-)
-from wagtail.images.blocks import ImageChooserBlock
-from wagtail.documents.blocks import DocumentChooserBlock
-from wagtail.core.blocks.base import Block, BoundBlock, DeclarativeSubBlocksMetaclass
